nit: untitlecase "Ghostspeak amulet", and remove explicit quantity